deploy/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: readtheplan
  labels:
    app.kubernetes.io/part-of: readtheplan
